gh pages update

--- a/website/package.json
+++ b/website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imp-app",
-  "homepage": "https://monash-data-science-and-ai-platform.github.io/IMP",
+  "homepage": "https://DeMarcoLab.github.io/IMP/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
