--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 /datahost/
-/website/node_modules/
+*/website/node_modules/
 *.pyc
 __pycache__
 *.vscode
+*/node_modules/
+/node_modules/
+*/testdata/
+*/dist/
+*/lib
+*/trans
+*/build/
+*/coverage/
+*/npm-debug.log
+*.pyc
+__pycache__
+*.sw[pmn]
+.vscode
+.env
