--- a/neuroglancer/package.json
+++ b/neuroglancer/package.json
@@ -19,7 +19,7 @@
     "build-python": "webpack --config ./config/webpack.config.js --env=python-dev",
     "build-python-min": "webpack --config ./config/webpack.config.js --env=python-min",
     "build:watch": "webpack --config ./config/webpack.config.js --watch",
-    "dev-server": "webpack-dev-server --config ./config/webpack.config.js" ,
+    "dev-server": "webpack-dev-server --config ./config/webpack.config.js",
     "dev-server-python": "webpack-dev-server --config ./config/webpack.config.js --env=python-dev",
     "test": "karma start ./config/karma.conf.js --single-run",
     "test:watch": "karma start ./config/karma.conf.js --no-single-run",
@@ -55,6 +55,7 @@
     "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "minimist": "^1.2.5",
+    "mongodb": "^4.1.3",
     "nunjucks": "^3.2.1",
     "rimraf": "^3.0.0",
     "tslint": "^5.20.1",
@@ -69,6 +70,7 @@
     "@types/pako": "^1.0.1",
     "@types/sockjs-client": "^1.1.1",
     "@types/webpack-env": "^1.15.3",
+    "axios": "^0.22.0",
     "codemirror": "^5.50.2",
     "css-loader": "^3.4.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -78,6 +80,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ikonate": "^1.1.1",
     "lodash": "^4.17.20",
+    "mongoose": "^6.0.9",
     "nifti-reader-js": "^0.5.4",
     "numcodecs": "^0.1.1",
     "pako": "^1.0.10",
