--- a/neuroglancer/tsconfig.json
+++ b/neuroglancer/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
+    "outDir": "built",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -34,6 +35,7 @@
     "python",
     "testdata",
     "examples",
-    "config"
+    "config",
+    "built"
   ]
 }
