--- a/neuroglancer/package.json
+++ b/neuroglancer/package.json
@@ -67,6 +67,7 @@
     "@types/pako": "^1.0.1",
     "@types/sockjs-client": "^1.5.0",
     "@types/webpack-env": "^1.16.0",
+    "axios": "^0.26.1",
     "codemirror": "^5.61.1",
     "esbuild": "^0.12.8",
     "gl-matrix": "3.1.0",
@@ -78,6 +79,7 @@
     "pako": "^2.0.3",
     "sockjs-client": "^1.5.1",
     "svg-inline-loader": "^0.8.2",
+    "three": "^0.139.2",
     "typescript": "^4.3.2"
   }
 }
