caught unresolved error message. highlighting on double click instead of colour picker.

--- a/neuroglancer/package.json
+++ b/neuroglancer/package.json
@@ -72,6 +72,7 @@
     "esbuild": "^0.12.8",
     "gl-matrix": "3.1.0",
     "glsl-editor": "^1.0.0",
+    "huebee": "^2.1.1",
     "ikonate": "mikolajdobrucki/ikonate#a86b4107c6ec717e7877f880a930d1ccf0b59d89",
     "lodash": "^4.17.21",
     "nifti-reader-js": "^0.5.4",
